--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,19 @@ button:hover {
     cursor: pointer;
 }
 
-#time-value, #clear, #left-side, #funct {
+#time-value, #clear, #left-side {
     width: 52px;
     height: 32px;
     font-size: 11px;
+    border-radius: 10px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+#funct {
+    width: 52px;
+    height: 32px;
+    font-size: 13px;
     border-radius: 10px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
@@ -107,3 +116,6 @@ button:hover {
     font-size: 16px;
 }
 
+.italic {
+    font-family: 'Source Serif Pro', serif;
+}
