--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ h1 {
 }
 
 #input {
-    height: 5rem;
-    border: 1px solid black;
+    height: 4.5rem;
+    border: 3px solid rgba(240, 238, 238, 0.8);
     background-color: rgba(192, 230, 88, 0.863);
     border-radius: 10px;
     margin: 20px 12px;
